games_database_project/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /integration/(.*)
            pathType: Prefix
            backend:
              service:
                name: myintegration-clusterip
                port:
                  number: 6000
          - path: /web/(.*)
            pathType: Prefix
            backend:
              service:
                name: myweb-clusterip
                port:
                  number: 5000
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: mybackend-clusterip
                port:
                  number: 4000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: myfrontend-clusterip
                port:
                  number: 80
